src/components/pages/search.less
.SearchPage {}

.SearchPage-headline {
  padding-bottom: @edu-content-padding;
}

.SearchPage-controls {
  display: grid;
  column-gap: 15px;
  grid-template-columns: 1fr 1fr 1fr;

  @media @edu-media-phone {
    row-gap: 15px;
    grid-template-columns: 100%;
    grid-template-rows: 1fr 1fr 1fr;
  }
}

.SearchPage-filter {
  display: block;
  width: 100%;
}

.SearchPage-filterPlaceholder {
  display: flex;
  justify-content: space-between;
}

.SearchPage-filterPlaceholderIcon {
  align-self: center
}

.SearchPage-selectedTags {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  padding-top: @edu-content-padding;
  padding-bottom: 2 * @edu-content-padding;
}

.SearchPage-deselectTagsLink {
  padding-left: 10px;
  font-size: 12px;
}

.SearchPage-cellTags {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.SearchPage-cellTagsExpandLink {
  font-size: 0.9em;
  display: inline-block;
  margin-left: 0.2em;
  height: 20px;
  padding: 3px;
  margin: 3px;
  margin-left: 1em;
}

.SearchPage-titleCell {
  display: block;
  text-decoration: none;
}

.SearchPage-titleCellTitle {
  font-size: 1.25em;
  font-weight: bold;
}

.SearchPage-titleCellDescription {
  margin-top: 0.2em;
  color: fade(@edu-text-color, 80%);
}

.SearchPage-titleCellDates {
  margin-top: 0.75em;
  font-size: 0.9em;
  color: fade(@edu-text-color, 66%);
}

